# DataAnalysis

./: Dockerfile  Dockerfile.dashboard  README.md  docker-compose.yml  ingest_lastfm.py  pyproject.toml  requirements.txt
airflow/: README.md  pyproject.toml
dashboard/: README.md  governance_app.py  storytelling_app.py  utils.py
datalake/: lastfm_music_20260321_222004.json  lastfm_top_artists_20260421_123745.json  lastfm_top_artists_20260518_185026.json  lastfm_top_artists_20260519_185900.json  lastfm_top_artists_20260521_190200.json  lastfm_top_artists_20260525_182437.json  lastfm_top_artists_20260527_192310.json  lastfm_top_artists_20260528_231950.json
datalake_bronze/: README.md  lastfm_top_artists_20260423_114544.json  lastfm_top_artists_20260424_013313.json  lastfm_top_artists_20260425_030802.json  lastfm_top_artists_20260520_192332.json  lastfm_top_artists_20260522_185254.json  lastfm_top_artists_20260523_175941.json  lastfm_top_artists_20260524_175746.json  lastfm_top_artists_20260526_192050.json  lastfm_top_artists_20260528_193511.json  lastfm_top_artists_20260529_193119.json
datalake_gold/: README.md  governance_20260530_005155.parquet  governance_20260530_011815.parquet  governance_current.parquet  storytelling_20260530_005158.parquet  storytelling_20260530_011816.parquet  storytelling_current.parquet
datalake_silver/: README.md
notebooks/: README.md  data_quality.ipynb  esqm_limpieza.ipynb  export_artists.csv  export_governance.csv  export_reddit.csv  export_storytelling.csv  export_tracks.csv  gold_analysis.ipynb  gold_preview.ipynb
(+170 files in other folders)
