[project]
name = "dataanalysis"
version = "0.1.0"
description = "Data analysis how the public perceives musicians, album and music trends"
authors = [
    {name = "cacelish@udistrital.edu.co",
            "juanlozadaus@gmail.com"
    }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "selenium (>=4.41.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
